# EleClock

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .mxproject  CMakeLists.txt  EleClock.ioc  ReadMe.md
BSP/: CMakeLists.txt
BSP/include/: error.h  pwm.h  uart.h
BSP/src/: pwm.cpp  uart.cpp
Core/Inc/: main.h  stm32f1xx_it.h
Core/Src/: gpio.c  main.c  main.cpp  stm32f1xx_it.c  tim.c  usart.c
User/App/include/: clock.h
User/App/src/: clock.cpp
User/Config/: callback_config.h
User/Config/include/: callback_config.h  init_config.h  task_config.h
User/Config/src/: callback_config.cpp  init_config.cpp
User/Lib/include/: time_math.h
User/Periph/include/: buzzer.h  screem.h  terminal.h  timer.h
User/Periph/src/: buzzer.cpp  screem.cpp  terminal.cpp  timer.cpp
cmake/stm32cubemx/: CMakeLists.txt
